Project

General

Profile

Actions

Bug #15607

closed

RuntimeError (can't get Master/Slave device) using PTY.open

Bug #15607: RuntimeError (can't get Master/Slave device) using PTY.open

Added by milo974 (Wesley Mouedine Assaby) over 7 years ago. Updated over 7 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.5.3p105 (2018-10-18 revision 65156) [x86_64-openbsd]
[ruby-core:91569]

Description

Hi

I use OpenBSD 6.4 (amd64) with ruby 2.5.3p105

All code that use PTY module doesn't work, i get RuntimeError(can't get Master/Slave device).

In a console IRB :

require 'pty'
==>true
master, slave = PTY.open
Traceback (most recent call last):
3: from /usr/local/bin/irb:11:in <main>' 2: from (irb):2 1: from (irb):2:in open'
RuntimeError (can't get Master/Slave device)

I can provide you ssh access to OpenBSD if you need.

Thank you very much.


Files

0001-Fix-PTY.open-on-OpenBSD.patch (948 Bytes) 0001-Fix-PTY.open-on-OpenBSD.patch jeremyevans0 (Jeremy Evans), 02/20/2019 01:25 AM
Actions

Also available in: PDF Atom